<resources>
    <string name="app_name">EvaluacionU1</string>
    //Nombres y Apellidos
    <string name="Nombres">Nombres/s</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Genero">Género</string>
    //Generos
    <string name="Masculino">Masculino</string>
    <string name="Femenino">Femenino</string>
    <string name="Omitir">Omitir</string>
    //Direccion
    <string name="Direccion">Dirección</string>
    <string name="Despacho">Seleccione el tipo de dirección de despacho</string>
    //Tipo de Direccion de despacho
    <string name="Hogar">Hogar</string>
    <string name="Trabajo">Trabajo</string>
    <string name="Urbano">Urbano</string>
    <string name="Limite_Urbano">Límite Urbano</string>
    //Condiciones
    <string name="Condiciones">Condiciones:</string>
    <string name="Condiciones_sub">CONDICIONES DE COMPRA Y ENVÍOS</string>
    //Acepto
    <string name="Acepto_Condiciones">Acepto las Condiciones</string>
    <string name="Confirmar_Perdido_Btn">Confirmar Pedido</string>
    <string name="Terminos_1">♡Todas las ventas se realizan únicamente a través de nuestro sitio web www.kawaiitreats.cl *Los envíos a región son realizados los días MIÉRCOLES</string>
    <string name="Terminos_2">*Los envíos dentro de Santiago y a 5ta región son realizados el día JUEVES; . Esto puede ser modificado ante cualquier eventualidad y será anunciado por nuestras redes sociales.</string>
    <string name="Terminos_3">MÉTODOS DE ENVÍO ♡ BLUEXPRESS:  Todos los envíos excluyendo Santiago y 5ta región serán enviados a través de BLUEXPRESS. El tiempo promedio de entrega de encomiendas de BLUEXPRESS es de 3 a 5 días hábiles en regiones y 6 a 7 días hábiles en regiones extremas desde el envío. En algunas ocasiones bluexpress puede determinar no realizar la entrega a domicilio y despacharla a la sucursal mas cercana; a su vez también puede presentar retrasos ocasionales de hasta 10 días hábiles.</string>
    <string name="Terminos_4">Desde el momento que es despachado el paquete a través de bluexpress es responsabilidad del cliente monitorear con el código de seguimiento enviado su encomienda y ante cualquier problema o eventualidad será el cliente quien deba comunicarse con correos de chile para mantener progreso con el envío.</string>
    <string name="Terminos_5">Los envíos con bluexpress son realizados los días MIÉRCOLES EL TIEMPO QUE MANEJA BLUEXPRESS ES DETERMINADO POR ELLOS. Nosotros podemos hacer un estimado, pero no somos la empresa de transporte. </string>
    <string name="Terminos_6">Cualquier demora desde el momento del envío es responsabilidad de la empresa mencionada anteriormente.</string>
</resources>
